kyoshikijoho_menu_buttons

--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -525,7 +525,7 @@ ul.ul3 li {
 	float: left;
 }
 .navi2 {
-	border-bottom: 2px solid #bdc1c4;
+	border-bottom: 2px solid #00327d;
 	padding-bottom: 36px;
 }
 #message_BOX {
